// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RichTextToolbar renders 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "flexDirection": "column",
        "justifyContent": "flex-end",
      },
      Object {
        "height": 50,
      },
    ]
  }
>
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderTopColor": "#C7CDD1",
        "borderTopWidth": 1,
      }
    }
  >
    <RCTScrollView
      horizontal={true}
    >
      <View />
    </RCTScrollView>
  </View>
</View>
`;

exports[`RichTextToolbar renders active items 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "white",
        "flexDirection": "column",
        "justifyContent": "flex-end",
      },
      Object {
        "height": 100,
      },
    ]
  }
>
  <ColorPicker
    pickedColor={[Function]}
  />
  <View
    style={
      Object {
        "backgroundColor": "white",
        "borderTopColor": "#C7CDD1",
        "borderTopWidth": 1,
      }
    }
  >
    <RCTScrollView
      horizontal={true}
    >
      <View>
        <TouchableHighlight
          onPress={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "padding": 8,
              "width": 50,
            }
          }
          testID="rich-text-toolbar-item-bold"
          underlayColor="#f5f5f5"
        >
          <Image
            source={1}
          />
        </TouchableHighlight>
        <TouchableHighlight
          onPress={[Function]}
          style={
            Object {
              "alignItems": "center",
              "justifyContent": "center",
              "padding": 8,
              "width": 50,
            }
          }
          testID="rich-text-toolbar-item-textColor"
          underlayColor="#f5f5f5"
        >
          <View
            style={
              Array [
                Object {
                  "borderRadius": 13,
                  "height": 26,
                  "width": 26,
                },
                Object {
                  "backgroundColor": "white",
                  "borderColor": "#E6E9EA",
                  "borderWidth": 1,
                },
              ]
            }
          />
        </TouchableHighlight>
      </View>
    </RCTScrollView>
  </View>
</View>
`;
